# ai-project

./: .gitignore  README.md  pyproject.toml  readme.md  setup.sh
src/terraforge_team/: crew.py  main.py
src/terraforge_team/config/: agents.yaml  tasks.yaml
