[project]
name = "terraforge-team"
version = "0.1.0"
description = "TerraForge AI - Agent Development Team"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
